[tool.poetry]
name = "clyde"
version = "0.1.0"
description = "A programming language for building discord bots."
authors = ["Liam Ilan <snowboardsheep@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.0.1"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
